Fixed the cartridge text overflow

--- a/src/components/ROMLoader/cartridge/cartridge.scss
+++ b/src/components/ROMLoader/cartridge/cartridge.scss
@@ -25,6 +25,8 @@
       width: 62%;
       height: 60%;
       margin-top: 15%;
+      padding-left: 20%;
+      padding-right: 20%;
 
       font-size: 1.25rem;
       text-align: center;
